# s2cpp-monorepo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
source/cg-gjk/: CMakeLists.txt  demo.cpp
source/cg-gjk/include/: cg_gjk.hpp
source/cg-gjk/src/: cg_gjk.cpp
source/common/: CMakeLists.txt
source/common/include/: demo_util.hpp
source/common/include/rayext/: raygui.h
source/common/shaders/: polyviz_simple.fs  polyviz_simple.vs
source/quick_guides/dot_and_cross/: CMakeLists.txt  demo.cpp
source/quick_guides/dot_and_cross/images/: right_hand_rule.license.txt
